hphp/test/zend/good/ext-date/idate_variation3.php.expectregex
\*\*\* Testing idate\(\) : usage variation \*\*\*

-- Testing idate\(\) function with float 12.3456789000e10 to timestamp --
int\((1935|5882)\)

-- Testing idate\(\) function with float -12.3456789000e10 to timestamp --
int\((2004|1901|-1943)\)
===DONE===