hphp/test/zend/bad/ext/date/tests/gmmktime_variation9.php.expectregex
\*\*\* Testing gmmktime\(\) : usage variation \*\*\*

--float 123456--
int\(1662595688\)
int\(1225589768\)
int\(1218306336\)
(bool|int)\((false|325855037288)\)
(bool|int)\((false|3844412784488)\)

--float -123456--
int\(773712488\)
int\(1210775048\)
int\(1218059424\)
(bool|int)\((false|-323460834712)\)
(bool|int)\((false|-3968710530712)\)

--float -10.5--
int\(1218118088\)
int\(1218181808\)
int\(1218182870\)
int\(1170922088\)
(bool|int)\((false|-62465356312)\)
===DONE===